eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-bank-api-deployment
  labels:
    app: dummy-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-bank-api
  template:
    metadata:
      labels:
        app: dummy-bank-api
    spec:
      containers:
      - name: dummy-bank-api
        image: 417441726608.dkr.ecr.us-east-2.amazonaws.com/dummybank:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
