eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: api.dummy-bank.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dummy-bank-api-service
                port:
                  number: 80
  tls:
  - hosts:
    - api.dummy-bank.xyz
    secretName: dummy-bank-api-cert
